// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fallback renderer should skip empty lines false 1`] = `
[
  [
    "◼ This will skip empty lines on output: false
",
  ],
  [
    "[2K[1A[2K[G❯ This will skip empty lines on output: false
",
  ],
  [
    "[2K[1A[2K[G❯ This will skip empty lines on output: false
  › THIS IS A LONG LONG MESSAGE


    AGE
    THIS ISESSAGE
    THIS IG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This will skip empty lines on output: false
",
  ],
  [
    "[2K[1A[2K[G",
  ],
  [
    "✔ This will skip empty lines on output: false
",
  ],
]
`;

exports[`fallback renderer should skip empty lines false 2`] = `[]`;

exports[`fallback renderer should skip empty lines false 3`] = `[]`;

exports[`fallback renderer should skip empty lines true 1`] = `
[
  [
    "◼ This will skip empty lines on output: true
",
  ],
  [
    "[2K[1A[2K[G❯ This will skip empty lines on output: true
",
  ],
  [
    "[2K[1A[2K[G❯ This will skip empty lines on output: true
  › THIS IS A LONG LONG MESSAGE
    AGE
    THIS ISESSAGE
    THIS IG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This will skip empty lines on output: true
",
  ],
  [
    "[2K[1A[2K[G",
  ],
  [
    "✔ This will skip empty lines on output: true
",
  ],
]
`;

exports[`fallback renderer should skip empty lines true 2`] = `[]`;

exports[`fallback renderer should skip empty lines true 3`] = `[]`;

exports[`fallback renderer should truncate long strings 1`] = `
[
  [
    "◼ This task will with formating the output with truncate output.
",
  ],
  [
    "[2K[1A[2K[G❯ This task will with formating the output with truncate output.
",
  ],
  [
    "[2K[1A[2K[G❯ This task will with formating the output with truncate output.
  › THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LO…
",
  ],
  [
    "[2K[1A[2K[1A[2K[G✔ This task will with formating the output with truncate output.
",
  ],
  [
    "[2K[1A[2K[G",
  ],
  [
    "✔ This task will with formating the output with truncate output.
",
  ],
]
`;

exports[`fallback renderer should truncate long strings 2`] = `[]`;

exports[`fallback renderer should truncate long strings 3`] = `[]`;

exports[`fallback renderer should truncate long strings 4`] = `
[
  [
    "◼ This task will with formating the output with truncate output.
",
  ],
  [
    "[2K[1A[2K[G❯ This task will with formating the output with truncate output.
",
  ],
  [
    "[2K[1A[2K[G❯ This task will with formating the output with truncate output.
  › THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will with formating the output with truncate output.
",
  ],
  [
    "[2K[1A[2K[G",
  ],
  [
    "✔ This task will with formating the output with truncate output.
",
  ],
]
`;

exports[`fallback renderer should truncate long strings 5`] = `[]`;

exports[`fallback renderer should truncate long strings 6`] = `[]`;

exports[`fallback renderer should truncate long titles 1`] = `
[
  [
    "◼ THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG…
",
  ],
  [
    "[2K[1A[2K[G❯ THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG…
",
  ],
  [
    "[2K[1A[2K[G❯ THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG…
  › This task will with formating the title with truncate output.
",
  ],
  [
    "[2K[1A[2K[1A[2K[G✔ THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG…
",
  ],
  [
    "[2K[1A[2K[G",
  ],
  [
    "✔ THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG…
",
  ],
]
`;

exports[`fallback renderer should truncate long titles 2`] = `[]`;

exports[`fallback renderer should truncate long titles 3`] = `[]`;

exports[`fallback renderer should truncate long titles 4`] = `
[
  [
    "◼ THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  › This task will with formating the title with truncate output.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G",
  ],
  [
    "✔ THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
",
  ],
]
`;

exports[`fallback renderer should truncate long titles 5`] = `[]`;

exports[`fallback renderer should truncate long titles 6`] = `[]`;

exports[`fallback renderer should wrap long strings 1`] = `
[
  [
    "◼ This task will with formating the output with wrap output.
",
  ],
  [
    "[2K[1A[2K[G❯ This task will with formating the output with wrap output.
",
  ],
  [
    "[2K[1A[2K[G❯ This task will with formating the output with wrap output.
  › THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG
    LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS
    A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG
    MESSAGE THIS IS A LONG LONG MESSAGE
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will with formating the output with wrap output.
",
  ],
  [
    "[2K[1A[2K[G",
  ],
  [
    "✔ This task will with formating the output with wrap output.
",
  ],
]
`;

exports[`fallback renderer should wrap long strings 2`] = `[]`;

exports[`fallback renderer should wrap long strings 3`] = `[]`;

exports[`fallback renderer should wrap long strings 4`] = `
[
  [
    "◼ This task will with formating the output with wrap output.
",
  ],
  [
    "[2K[1A[2K[G❯ This task will with formating the output with wrap output.
",
  ],
  [
    "[2K[1A[2K[G❯ This task will with formating the output with wrap output.
  › THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
    THIS IS A LONG LONG MESSAGE
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will with formating the output with wrap output.
",
  ],
  [
    "[2K[1A[2K[G",
  ],
  [
    "✔ This task will with formating the output with wrap output.
",
  ],
]
`;

exports[`fallback renderer should wrap long strings 5`] = `[]`;

exports[`fallback renderer should wrap long strings 6`] = `[]`;

exports[`fallback renderer should wrap long titles 1`] = `
[
  [
    "◼ THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG
  MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG
  LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A
  LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS
  IS A LONG LONG MESSAGE
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG
  MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG
  LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A
  LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS
  IS A LONG LONG MESSAGE
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG
  MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG
  LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A
  LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS
  IS A LONG LONG MESSAGE
  › This task will with formating the title with wrap output.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG
  MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG
  LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A
  LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS
  IS A LONG LONG MESSAGE
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G",
  ],
  [
    "✔ THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG
  MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG
  LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A
  LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS
  IS A LONG LONG MESSAGE
",
  ],
]
`;

exports[`fallback renderer should wrap long titles 2`] = `[]`;

exports[`fallback renderer should wrap long titles 3`] = `[]`;

exports[`fallback renderer should wrap long titles 4`] = `
[
  [
    "◼ THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  › This task will with formating the title with wrap output.
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
",
  ],
  [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G",
  ],
  [
    "✔ THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
  THIS IS A LONG LONG MESSAGE
",
  ],
]
`;

exports[`fallback renderer should wrap long titles 5`] = `[]`;

exports[`fallback renderer should wrap long titles 6`] = `[]`;